@@ -27,6 +27,8 @@
  - New API: AppMesh
  - New API: Kafka
  - New API: LicenseManager
+ - New API: ApiGatewayManagement 
+ - New API: ApiGatewayV2
 
 0.38 19 Jun 2018
  - Fix test suite so that credentials_process tests don't need extra modules (#251, #248)
